examples/security/cert-manager/nlb-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-tls-passthrough
  namespace: demo-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
spec:
  type: LoadBalancer
  loadBalancerClass: service.k8s.aws/nlb
  selector:
    app: app
  ports:
    - name: tls
      port: 443
      targetPort: 8443
      protocol: TCP
